examples/nginx-sample/alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # (Optional) Additional annotation for complex configure (comma separated `stringList`)
    # alb.ingress.kubernetes.io/certificate-arn: cert1-arn,cert2-arn

    # (Optional) Serve 80 port as well and make it redirect to 443
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: "443"

    # (Optional)
    # alb.ingress.kubernetes.io/security-groups: sg-1,sg-2 (comma separated `stringList`)
    # alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true" # required aws-load-balancer-controller v2.3.0+

    # (Optional) Custom attributes
    # Load Balancer Attributes
    # - https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/#custom-attributes
    # - https://docs.aws.amazon.com/elasticloadbalancing/latest/application/application-load-balancers.html#load-balancer-attributes
    # Target Group Attributes
    # - https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-target-groups.html#target-group-attributes
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: alb
  rules:
  - host: entry1.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
